# local-llm

./: .gitignore  LICENSE  README.md  dev_server.yaml  plan.md  server.yaml
Rpkg/: .Rbuildignore  DESCRIPTION  NAMESPACE
Rpkg/R/: client.R  config.R  grammar.R  server.R
Rpkg/tests/: testthat.R
grammars/: bool.gbnf  thinking_animals.gbnf  thinking_bool.gbnf
python/: pyproject.toml
python/src/local_llm/: __init__.py  annotation.py  client.py  server.py
python/tests/: test_annotation.py  test_client.py
